# rust-cli-workshop

./: .gitignore  Cargo.toml  LICENSE  README.md
1_setup/: README.md
1_setup/solution/: Cargo.toml
1_setup/solution/src/: main.rs
2_syntax/: README.md
2_syntax/solution/: Cargo.toml
2_syntax/solution/src/: main.rs
3_args/: README.md
3_args/solution/: Cargo.toml
3_args/solution/src/: chifoumi.rs  main.rs
4_cli/: README.md
4_cli/solution/: Cargo.toml
4_cli/solution/src/: chifoumi.rs  main.rs
4_documentation/: README.md
4_mod/: README.md
4_mod/solution/: Cargo.toml
4_mod/solution/src/: main.rs
5_api/: README.md
5_cli/: README.md
5_cli/solution/: Cargo.toml
5_cli/solution/src/: chifoumi.rs  greetings.rs  main.rs
6_api/: README.md
6_api/solution/: Cargo.toml
6_api/solution/src/: main.rs  search.rs
_notes/: Cargo.toml  README.md
_notes/src/: main.rs
