[package]
## should be named crabby by following workshop
## different name because used as workspace member to check all projects easily
name = "crabby_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
rand = "0.8.5"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
