[package]
## should be named crabby by following workshop
## different name because used as workspace member to check all projects easily
name = "crabby_cli"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rand = "0.8"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
