[package]
## should be named crabby by following workshop
## different name because used as workspace member to check all projects easily
name = "crabby_api"
version = "0.1.1"
edition = "2021"

[dependencies]
clap = { version = "4.6", features = ["derive"] }
cli-table = "0.5"
rand = "0.10"
reqwest = { version = "0.13", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"

[dev-dependencies]
mockito = "1.7"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
